# python-project-50

./: Makefile  README.md  file1.json  pyproject.toml
.github/workflows/: github-actions.yml
gendiff/: generate_diff.py
gendiff/scripts/: gendiff.py  generate_diff.py
tests/: test_gendiff.py
