[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Rendleks <0rendl050@gmail.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"},
    ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
asciinema = "^2.2.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
